# lab3_process

./: .gitignore  CMakeLists.txt  LICENSE.md  Lab3_Qt20_2026.docx  README.md
.github/workflows/: ci.yml
child/: CMakeLists.txt
child/app/: CMakeLists.txt
child/app/include/: mainwindow.h
child/app/src/: main.cpp  mainwindow.cpp  mainwindow.ui
child/tests/: CMakeLists.txt  test_mainwindow.cpp
common/: CMakeLists.txt
common/app/: CMakeLists.txt
common/app/src/: sharedmemorychannel.cpp
common/include/: sharedmemorychannel.h
common/src/: sharedmemorychannel.cpp
common/tests/: CMakeLists.txt  test_sharedmemorychannel.cpp
parent/: CMakeLists.txt
parent/app/: CMakeLists.txt
parent/app/include/: mainwindow.h
parent/app/src/: main.cpp  mainwindow.cpp  mainwindow.ui
parent/tests/: CMakeLists.txt  test_mainwindow.cpp
